--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tahmid Haque</title>
+        <meta
+            name="description"
+            content="I'm a Computer Science student at the University of Toronto in my final year of study. To learn about my experiences, see my portfolio, or wish to contact, browse my portfolio site!"
+        />
+        <title>Tahmid Haque | Portfolio</title>
     </head>
     <body>
         <div id="app"></div>
