--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             name="description"
             content="I'm a Computer Science student at the University of Toronto in my final year of study. To learn about my experiences, see my portfolio, or wish to contact, browse my portfolio site!"
         />
-        <title>Tahmid Haque | Portfolio</title>
+        <title>Tahmid Haque</title>
     </head>
     <body>
         <div id="app"></div>
